--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,5 +23,8 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
       hibernate:
+        jdbc:
+          lob:
+            non_contextual_creation=true: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
